# AzureOpenAI-Sora-Docker

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: publish-ghcr.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  run.py  startbackend.bat
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/models/: schemas.py
backend/app/services/: azure_sora.py  cost.py
backend/tests/: test_cost.py  test_validation.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/components/: ToastProvider.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ErrorPage.tsx  Home.tsx  Result.tsx  Status.tsx
